# skyagi

./: .flake8  .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  setup.cfg
.github/scripts/: release.py
.github/workflows/: linting.yml  publish.yml  release.yml
.vercel/: project.json
community-profiler/: Makefile  README.md  setup.cfg
community-profiler/src/community_profiler/: __init__.py  cli.py
community-profiler/tests/: deploy_modal.py  deploy_to_modal.py  modal_potential_stargazers.py
examples/: Ai.json  Ava.json  BuckyBarnes.json  Conan.json  Luca.json  Ran.json  TonyStark.json  agent.json  config.json  config.yaml  example_agent.json  hailey.json  justin.json  model_config.yaml  selena.json  steverogers.json  zayn.json
examples/Avengers/: BuckyBarnes.json  SteveRogers.json  TonyStark.json
examples/BigBangTheory/: Leonard.json  Penny.json  Sheldon.json
scripts/: format-staged-files.sh  pre-commit  pre-push  run.py
skyagi/: pyproject.toml  setup.cfg
skyagi-api/: README.md  requirements.txt  skyagi-api.py
skyagi-api/example/: client.py  skyagi-api-client.py
skyagi-critic/crawler/: abstract.py  imbd.py  index.py
skyagi-live-stream/: test_client_self.py
skyagi-web/: .env.example  .prettierrc  package-lock.json  package.json  requirements.txt  svelte.config.js  tailwind.config.cjs  vercel.json  vite.config.ts
skyagi-web/api/: index.py
skyagi-web/src/: app.d.ts  hooks.server.ts  styles.css
skyagi-web/src/lib/: AgentDetails.svelte  AgentDetailsNew.svelte  AgentForm.svelte  Character.svelte  Character_dashboard.svelte  ChatHistory.svelte  ChatMessage.svelte  Error.svelte  Input.svelte  Toast.svelte  agent.ts  chat-message.svelte  chatbot-websocket.svelte  chatbot.svelte  dashboard-character.svelte  dashboard-conversation.svelte  input-block.svelte  notifications.js  room-new-character.svelte  room-store.js  store.js  stores.ts  token-store.js  types.ts  utils.ts  vitals.js
skyagi-web/src/lib/examples/: examples.json
skyagi-web/src/lib/model/: model.ts
skyagi-web/src/lib/settings/: credentials.ts
skyagi-web/src/lib/stores/: chat-history.ts  chat-messages.ts
skyagi-web/src/lib/utils/: tokenizer.ts
skyagi-web/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
skyagi-web/src/routes/account/: +page.server.ts  +page.svelte
skyagi-web/src/routes/agent/: +layout.svelte  +page.svelte
skyagi-web/src/types/: sse.d.ts
skyagi-web/supabase/sql_queries/: match_documents.sql  match_memories.sql  remove_dirty_conversation_and_memory_data.sql
skyagi/src/skyagi/: api.py  cli.py  client.py  config.py  constants.py  context.py  model.py  retriever.py  settings.py  skyagi.py  util.py
skyagi/src/skyagi/discord/: __init__.py
skyagi/src/skyagi/settings/: __init__.py  base.py  util.py
skyagi/src/skyagi/simulation/: agent.py  simulation.py
src/skyagi/: cli.py  config.py  context.py  skyagi.py  util.py
src/skyagi/agent/: README.md
src/skyagi/discord/: agent.py  client.py
src/skyagi/generative_agent/: agent.py
src/skyagi/memory/: agent.py  memory.py
src/skyagi/simulation/: agent.py  memory.py  run.py  simulation.py
web/: package-lock.json  package.json  svelte.config.js
web/src/routes/: +layout.svelte  +layout.ts
(+55 files in other folders)
