[metadata]
name = skyagi
version = 0.0.1
author = Tan Li
author_email = tan@tanli.dev
description = AGI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/litanlitudan/skyagi
project_urls =
    Bug Tracker = https://github.com/litanlitudan/skyagi/issues
    Changelog = https://github.com/litanlitudan/skyagi/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    beautifulsoup4
    fastapi
    html2text
    markdown
    psutil
    rich
    sentry-sdk
    textual
    typer
    uvicorn[standard]
    whoosh
    # ml related
    datasets
    faiss-cpu
    openai
    pinecone-client
    sacremoses
    sentence-transformers
    transformers
    txtai

[options.extras_require]
dev =
    black
    Faker
    flake8
    isort
    memray
    pdbpp
    pytest
    richbench

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    skyagi = skyagi:cli
