[metadata]
name = community-profiler
version = 0.0.1
author = Tan Li
author_email = tan@tanli.dev
description = Github community profiler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/litanlitudan/skyagi/tree/main/community-profiler
project_urls =
    Bug Tracker = https://github.com/litanlitudan/skyagi/issues
    Changelog = https://github.com/litanlitudan/skyagi/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    rich
    textual
    typer
    termcolor
    tiktoken
    faiss-cpu
    openai
    lancedb

[options.extras_require]
dev =
    black
    Faker
    flake8
    isort
    memray
    pdbpp
    pytest
    richbench

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    community-profiler = community_profiler:cli
